--- a/index.html
+++ b/index.html
@@ -31,12 +31,9 @@
         </div>
         <div class="content">
             <div id="c_text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                <a href="flex2/index.htm">flex2</a>
+                <br><a href="flex2/index.htm">flex2</a>
+                <br><a href="flexxx/AaAaA.htm">lol3</a>
+                <br><a href="flexxx/Оппа.htm">kek4</a>
             </div>
         </div>
     </body>
