--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="content">
             <div id="c_text">
                 <br><a href="flex2/index.htm">flex2</a>
-                <br><a href="flexxx/AaAaA.htm">lol3</a>
+                <br><a href="flexxx/АаАаА.htm">lol3</a>
                 <br><a href="flexxx/Оппа.htm">kek4</a>
             </div>
         </div>
