--- a/flexxx/Оппа.htm
+++ b/flexxx/Оппа.htm
@@ -43,5 +43,6 @@ select Safe Mode.
 <p>*** xNtKrnl.exe - Address 0xfffff80002e55151 base at 0xfffff80002e0d000 DateStamp 
 0x4ce7951a
 <p align=center><A href="http://www.smp42.ru"> Вызвать скорую помощь</A>
+<audio><source type="audio/mpeg" src="Обращение к Обэме HD.mp3" /></audio><button onclick="this.previousSibling.play()"> Обэма опять вк сломал</button>
 </BODY>
 </HTML>
