--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
                 width: 144px;
                 height: 22px;
             }
+            .flex {
+                color: white;
+            }
         </style>
     </head>
     <body>
@@ -26,13 +29,12 @@
         </div>
         <div class="s_header">
             <div id="s_h_text">
-                <a href="https://soundcloud.com/blure_prod">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod eligendi obcaecati veniam laudantium!</a>
+                <a class="flex" href="https://soundcloud.com/blure_prod">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod eligendi obcaecati veniam laudantium!</a>
             </div>
         </div>
         <div class="content">
             <div id="c_text">
                 <br><a href="flex2/index.htm">flex2</a>
-                <br><a href="flexxx/АаАаА.htm">lol3</a>
                 <br><a href="flexxx/Оппа.htm">kek4</a>
             </div>
         </div>
