--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="style.css">
-        <title> Flex. </title>
+        <title> Blure Prod. </title>
         <style>
             .kn {
                 width: 228px;
@@ -16,26 +16,35 @@
             .flex {
                 color: white;
             }
+            .flex:hover {
+                border: 1px solid white;
+            }
+            .img {
+                float:left;
+                margin: 0px 7px 7px 0;
+            }
         </style>
     </head>
     <body>
-        <script defer src="Flex.js">
-        </script>
-        <embed src="Flex.mp3" autostart="true" hidden="true" loop="2" width="0" height="0" align="bottom"></embed>
+        <embed src="Flex.mp3" autostart="true" hidden="true" loop="0" width="0" height="0" align="bottom"></embed>
         <div class="header">
             <div id="h_text">
-                Flex.
+                Blure Prod.
             </div>
         </div>
         <div class="s_header">
             <div id="s_h_text">
-                <a class="flex" href="https://soundcloud.com/blure_prod">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod eligendi obcaecati veniam laudantium!</a>
+                <a class="flex" href="https://soundcloud.com/blure_prod">Blure Prod. The best beats for your song.</a>
             </div>
         </div>
         <div class="content">
             <div id="c_text">
-                <br><a href="flex2/index.htm">flex2</a>
-                <br><a href="flexxx/Оппа.htm">kek4</a>
+                <p align=left><img class="img" src="Flex.jpg" height="228px" title="Blure's logo">
+                Blure - is the beatmaker. He has headphones and a love of music. 
+                Every beat you can use for free for your song. 
+                All the beats are laid out on the <a href="https://soundcloud.com/blure_prod" title="My sound cloud">sound cloud</a>. 
+                <br>You can mail me on <a href="mailto:blure_prod@mail.ru?subject=Question of cooperation">blure_prod@mail.ru</a>
+                <br>At the moment there are such works as <b>A$AP Rocky type beat, Ski Mask type beat, PHARAOH type beat, Juice wrld type Beat, Guitar Beat</b> and many others.
             </div>
         </div>
     </body>
