--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 Every beat you can use for free for your song. 
                 All the beats are laid out on the <a href="https://soundcloud.com/blure_prod" title="My sound cloud">sound cloud</a>. 
                 <br>You can mail me on <a href="mailto:blure_prod@mail.ru?subject=Question of cooperation">blure_prod@mail.ru</a>
-                <br>At the moment there are such works as <b><a href="https://soundcloud.com/blure_prod/aap-rocky-type-beat">A$AP Rocky type beat</a>, <a href="https://soundcloud.com/blure_prod/ski-mask-type-beat">Ski Mask type beat</a>, <a href="https://soundcloud.com/blure_prod/pharaoh-type-beat">PHARAOH type beat</a>, <a href="https://soundcloud.com/blure_prod/juice-wrld-type-beat">Juice wrld type Beat</a>, <a href="https://soundcloud.com/blure_prod/guitar-beat">Guitar Beat</a></b> and many others.
+                <br>At the moment there are such works as <b><a href="https://soundcloud.com/blure_prod/aap-rocky-type-beat">A$AP&nbsp;Rocky&nbsp;type&nbsp;beat</a>, <a href="https://soundcloud.com/blure_prod/ski-mask-type-beat">Ski&nbsp;Mask&nbsp;type&nbsp;beat</a>, <a href="https://soundcloud.com/blure_prod/pharaoh-type-beat">PHARAOH&nbsp;type&nbsp;beat</a>, <a href="https://soundcloud.com/blure_prod/juice-wrld-type-beat">Juice&nbsp;wrld&nbsp;type&nbsp;Beat</a>, <a href="https://soundcloud.com/blure_prod/guitar-beat">Guitar&nbsp;Beat</a></b> and many others.
             </div>
         </div>
     </body>
