Да пиздец я закомментил

--- a/index.html
+++ b/index.html
@@ -1,50 +1,42 @@
 <DOCTYPE! html>
 <HTML>
     <head>
-        <meta charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="style.css">
-        <title> Blure Prod. </title>
+        <meta charset="utf-8"> <!--Кодировка-->
+        <link rel="stylesheet" type="text/css" href="style.css"><!--Прикрепления файла css-->
+        <title> Blure Prod. </title><!--Название вкладки-->
         <style>
-            .kn {
-                width: 228px;
-                height: 22px;
-            }
-            .kt {
-                width: 144px;
-                height: 22px;
-            }
-            .flex {
+            .flex { /*Ссылка, которая под шапкой*/
                 color: white;
             }
-            .flex:hover {
+            .flex:hover { /*Ссылка при наведение, которая под шапкой*/
                 border: 1px solid white;
             }
-            .img {
+            .img { /*Картиночка*/
                 float:left;
                 margin: 0px 7px 7px 0;
             }
         </style>
     </head>
     <body>
-        <embed src="Flex.mp3" autostart="true" hidden="true" loop="0" width="0" height="0" align="bottom"></embed>
-        <div class="header">
-            <div id="h_text">
+        <embed src="Flex.mp3" autostart="true" hidden="true" loop="0" width="0" height="0" align="bottom"></embed><!--Фоновая музыка-->
+        <div class="header"><!--Шапка-->
+            <div id="h_text"><!--Текст в шапке-->
                 Blure Prod.
             </div>
         </div>
-        <div class="s_header">
-            <div id="s_h_text">
-                <a class="flex" href="https://soundcloud.com/blure_prod">Blure Prod. The best beats for your song.</a>
+        <div class="s_header"><!--Чёрная шапка-->
+            <div id="s_h_text"><!--Текст в чёрной шапке-->
+                <a class="flex" href="https://soundcloud.com/blure_prod">Blure Prod. The best beats for your song.</a><!--Ссылка на саунд клауд-->
             </div>
         </div>
-        <div class="content">
-            <div id="c_text">
-                <p align=left><img class="img" src="Flex.jpg" height="228px" title="Blure's logo">
+        <div class="content"><!--Контент-->
+            <div id="c_text"><!--Текст в контенте-->
+                <p align=left><img class="img" src="Flex.jpg" height="228px" title="Blure's logo"><!--Картиночка-->
                 Blure - is the beatmaker. He has headphones and a love of music. 
                 Every beat you can use for free for your song. 
                 All the beats are laid out on the <a href="https://soundcloud.com/blure_prod" title="My sound cloud">sound cloud</a>. 
-                <br>You can mail me on <a href="mailto:blure_prod@mail.ru?subject=Question of cooperation">blure_prod@mail.ru</a>
-                <br>At the moment there are such works as <b><a href="https://soundcloud.com/blure_prod/aap-rocky-type-beat">A$AP&nbsp;Rocky&nbsp;type&nbsp;beat</a>, <a href="https://soundcloud.com/blure_prod/ski-mask-type-beat">Ski&nbsp;Mask&nbsp;type&nbsp;beat</a>, <a href="https://soundcloud.com/blure_prod/pharaoh-type-beat">PHARAOH&nbsp;type&nbsp;beat</a>, <a href="https://soundcloud.com/blure_prod/juice-wrld-type-beat">Juice&nbsp;wrld&nbsp;type&nbsp;Beat</a>, <a href="https://soundcloud.com/blure_prod/guitar-beat">Guitar&nbsp;Beat</a></b> and many others.
+                <br>You can mail me on <a href="mailto:blure_prod@mail.ru?subject=Question of cooperation">blure_prod@mail.ru</a><!--Здесь открывается почта-->
+                <br>At the moment there are such works as <b><a href="https://soundcloud.com/blure_prod/aap-rocky-type-beat">A$AP&nbsp;Rocky&nbsp;type&nbsp;beat</a>, <a href="https://soundcloud.com/blure_prod/ski-mask-type-beat">Ski&nbsp;Mask&nbsp;type&nbsp;beat</a>, <a href="https://soundcloud.com/blure_prod/pharaoh-type-beat">PHARAOH&nbsp;type&nbsp;beat</a>, <a href="https://soundcloud.com/blure_prod/juice-wrld-type-beat">Juice&nbsp;wrld&nbsp;type&nbsp;Beat</a>, <a href="https://soundcloud.com/blure_prod/guitar-beat">Guitar&nbsp;Beat</a></b> and many others.<!--Ссылки на треки в саунд клауде-->
             </div>
         </div>
     </body>
