--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <div class="s_header"><!--Чёрная шапка-->
             <div id="s_h_text"><!--Текст в чёрной шапке-->
-                <a class="flex" href="https://soundcloud.com/blure_prod">Blure Prod. The best beats for your song.</a><!--Ссылка на саунд клауд-->
+                <a class="flex" href="https://soundcloud.com/blure_prod" target="_blank">Blure Prod. The best beats for your song.</a><!--Ссылка на саунд клауд-->
             </div>
         </div>
         <div class="content"><!--Контент-->
@@ -34,9 +34,9 @@
                 <p align=left><img class="img" src="Flex.jpg" height="228px" title="Blure's logo"><!--Картиночка-->
                 Blure - is the beatmaker. He has headphones and a love of music. 
                 Every beat you can use for free for your song. 
-                All the beats are laid out on the <a href="https://soundcloud.com/blure_prod" title="My sound cloud">sound cloud</a>. 
+                All the beats are laid out on the <a href="https://soundcloud.com/blure_prod" title="My sound cloud" target="_blank">sound cloud</a>. 
                 <br>You can mail me on <a href="mailto:blure_prod@mail.ru?subject=Question of cooperation">blure_prod@mail.ru</a><!--Здесь открывается почта-->
-                <br>At the moment there are such works as <b><a href="https://soundcloud.com/blure_prod/aap-rocky-type-beat">A$AP&nbsp;Rocky&nbsp;type&nbsp;beat</a>, <a href="https://soundcloud.com/blure_prod/ski-mask-type-beat">Ski&nbsp;Mask&nbsp;type&nbsp;beat</a>, <a href="https://soundcloud.com/blure_prod/pharaoh-type-beat">PHARAOH&nbsp;type&nbsp;beat</a>, <a href="https://soundcloud.com/blure_prod/juice-wrld-type-beat">Juice&nbsp;wrld&nbsp;type&nbsp;Beat</a>, <a href="https://soundcloud.com/blure_prod/guitar-beat">Guitar&nbsp;Beat</a></b> and many others.<!--Ссылки на треки в саунд клауде-->
+                <br>At the moment there are such works as <b><a href="https://soundcloud.com/blure_prod/aap-rocky-type-beat" target="_blank">A$AP&nbsp;Rocky&nbsp;type&nbsp;beat</a>, <a href="https://soundcloud.com/blure_prod/ski-mask-type-beat" target="_blank">Ski&nbsp;Mask&nbsp;type&nbsp;beat</a>, <a href="https://soundcloud.com/blure_prod/pharaoh-type-beat" target="_blank">PHARAOH&nbsp;type&nbsp;beat</a>, <a href="https://soundcloud.com/blure_prod/juice-wrld-type-beat" target="_blank">Juice&nbsp;wrld&nbsp;type&nbsp;Beat</a>, <a href="https://soundcloud.com/blure_prod/guitar-beat" target="_blank">Guitar&nbsp;Beat</a></b> and many others.<!--Ссылки на треки в саунд клауде-->
             </div>
         </div>
     </body>
